tests/negative_pomidory/more_than_1_obj_bckwrd_action_except.pomidor

sdfsdfsdfsdf sdfsdfsdfsdfsd
sdfsdf

crazytomato -1
When I see the #practice_menu_button and #practice_menu_button is click
